# ChangeLog for dev-python/restview
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Oct 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Switch to using jnrowe-pypi eclass.

  30 Sep 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Keyworded ~x86.

*restview-1.1.1 (29 Sep 2009)

  29 Sep 2009; James Rowe <jnrowe@gmail.com> +restview-1.1.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
