@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST restview-1.1.1.tar.gz 6892 RMD160 4a7c37d06faef4609884fb91d1fcff0f5816f613 SHA1 c65ad56fa1527828dcd88953dfcd9add7c3f3950 SHA256 c75cdb3ee672b8d3e7576246ab0090e3101a86d7dd80ca65f3d268bfd6ee985a
-EBUILD restview-1.1.1.ebuild 506 RMD160 518311e4b2a7b001f90e9b8cec65960ec455c452 SHA1 14e60d9a087941f83858f7f44407655fad0f7051 SHA256 39d5b14f8318dbd477120bec713c3a7ee4503557f36f8afb3f5b1db216cd34f0
-MISC ChangeLog 457 RMD160 62484ca7355fe88c24a572fec2b8fdf6805ce831 SHA1 eb081b659b46eb790d9a7bcd196827f45539a853 SHA256 7326c17f431e0aef1eb3d665e81cbc53155177c22f779b2481be91a3b72febe0
+EBUILD restview-1.1.1.ebuild 520 RMD160 32313f76a746fccb3ea7189c49a47b35ca624f51 SHA1 45d1133ab5e1c901ed6dafd8a6b92561e6fd866b SHA256 241eaefc2c30f176bb2d90c5f0aa62092d3e327a35c82052402aceb7b7c175dd
+MISC ChangeLog 575 RMD160 7478718ea033a585a9339cbb599419fd900ee237 SHA1 51f29e5dc54ff4f3d7a19cb2d092154ca12cacad SHA256 e5ce188a16cf8086e6549b7734a2eb36e51f48fe351e9fb1249d125f4f351754
 MISC metadata.xml 879 RMD160 479742b661fc063d46e1be269108144f774d6565 SHA1 b635add369b87a3e0020aedcc25eb98b581841a1 SHA256 0f0ff7b5996d41ca7326b89adf8eec1e772946208e15d4e1f962942cbae443d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrVvewACgkQzJrj3cAXR0nX7QCgkm9bsjEHfdRphZ27o1RdLzcv
-KrMAnAhCHqK5FVOTyPVKWI5ZPV+Z/pi7
-=zuVa
+iEYEARECAAYFAkraxeYACgkQzJrj3cAXR0n49QCfVUi7Gk7Uy+p/wO0zCzPzMgnD
+nx4AoIP1PziozAu8zkxjgTAEBAqwJ/i/
+=tgS4
 -----END PGP SIGNATURE-----
