@@ -1,5 +1,5 @@
 dev-python/setuptools >=app-admin/eselect-python-20090804 >=app-shells/bash-3.2 virtual/python
-dev-python/docutils dev-python/setuptools pygments? ( dev-python/pygments ) virtual/python
+dev-python/docutils pygments? ( dev-python/pygments ) virtual/python
 0
 http://pypi.python.org/packages/source/r/restview/restview-1.1.1.tar.gz
 
